# ESP-Pocket2

./: .gitmodules  CMakeLists.txt
.github/workflows/: build-esp-idf-project.yml
main/: CMakeLists.txt  Kconfig.projbuild  idf_component.yml  main.c  main_axp202.c  main_bm8563.c  main_drv2605.c  main_i2c_scanner.c  main_lvgl.c
main/i2c/: i2c_port.cpp
main/i2c_driver/: i2c_driver.cpp  i2c_driver.h
main/i2c_port/: i2c_port.cpp  i2c_port.h
main/i2c_scanner/: i2c_scanner.c  i2c_scanner.h
main/lvgl/: hp28008.c  hp28008.h
main/power/: axp202_port.cpp  axp202_port.h
main/sensor_bm8563/: sensor_bm8563.cpp  sensor_bm8563.h
main/sensor_drv2605/: sensor_drv2605.cpp  sensor_drv2605.h
